After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 590828 - gnome-session crashed with SIGSEGV in g_main_context_dispatch()
gnome-session crashed with SIGSEGV in g_main_context_dispatch()
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: gnome-session
2.27.x
Other Linux
: Normal critical
: ---
Assigned To: Session Maintainers
Session Maintainers
: 580990 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-08-05 10:48 UTC by Pedro Villavicencio
Modified: 2011-05-26 10:39 UTC
See Also:
GNOME target: ---
GNOME version: 2.27/2.28


Attachments
0001-Bug-590828-Fix-a-crash-on-logout-triggered-by-non-re.patch (1.03 KB, patch)
2009-09-21 01:26 UTC, Chris Coulson
reviewed Details | Review

Description Pedro Villavicencio 2009-08-05 10:48:49 UTC
this report has been filed here:

https://bugs.edge.launchpad.net/ubuntu/+source/gnome-session/+bug/408481

"got the crash after an update"

".

Thread 1 (process 4287)

  • #0 prop_to_command
    at gsm-xsmp-client.c line 361
  • #1 _on_query_end_session_timeout
    at gsm-manager.c line 1215
  • #2 g_timeout_dispatch
    at /build/buildd/glib2.0-2.21.4/glib/gmain.c line 3396
  • #3 IA__g_main_context_dispatch
    at /build/buildd/glib2.0-2.21.4/glib/gmain.c line 1960
  • #4 g_main_context_iterate
    at /build/buildd/glib2.0-2.21.4/glib/gmain.c line 2591
  • #5 IA__g_main_loop_run
    at /build/buildd/glib2.0-2.21.4/glib/gmain.c line 2799
  • #6 IA__gtk_main
    at /build/buildd/gtk+2.0-2.17.6/gtk/gtkmain.c line 1205
  • #7 main
    at main.c line 524

Comment 1 Chris Coulson 2009-09-21 01:26:55 UTC
Created attachment 143559 [details] [review]
0001-Bug-590828-Fix-a-crash-on-logout-triggered-by-non-re.patch

The issue here seems to be that the query-end-session phase times out due to a non-responding XSMP client, and it then crashes in xsmp_get_app_name before creating the inhibitor, because the client has no SmProgram property.

The attached patch should fix that.
Comment 2 Vincent Untz 2009-09-30 16:34:48 UTC
fwiw, I stumbled upon this some time ago -- the only reason I didn't commit something similar to this patch is that I didn't have time to check that it's fine to return NULL from this function...
Comment 3 Vincent Untz 2009-10-11 20:39:48 UTC
*** Bug 580990 has been marked as a duplicate of this bug. ***
Comment 4 Vincent Untz 2011-05-26 10:39:18 UTC
I committed a fix that is a bit more generic, since the issue appeared in various other places.