gsm: Do not assume XSMP clients set the SmProgram property

Since setting some properties can be skipped, there is no guarantee that
SmProgram is set.

This fixes a crash.

https://bugzilla.gnome.org/show_bug.cgi?id=590828